# FaisanIDE

./: CMakeLists.txt
src/: main.cpp
src/ui/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
